src/objects/In_Store_Execution__c.object
<CustomObject>
    <description>B&amp;Q: Object to collect statistical data regarding a Store (Account) during a Reps visit</description>
    <fields>
        <fullName>Account_Intelligence_Maintenance__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Account Intelligence Maintenance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account the In Store Execution Record is linked to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>In Store Executions</relationshipLabel>
        <relationshipName>In_Store_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advise_Paint_Counter_of_Arrival__c</fullName>
        <description>Masters</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Advise Paint Counter of Arrival</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Colourant_Available__c</fullName>
        <label>All Colourant Available</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_Clean_and_Tidy__c</fullName>
        <description>B&amp;Q: Is the area clean and tidy?</description>
        <label>Area Clean and Tidy?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assist_Associates_with_Customers__c</fullName>
        <description>Masters</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Assist Associates with Customers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assist_Customers__c</fullName>
        <description>Wattyl Masters</description>
        <inlineHelpText>Duration in Min</inlineHelpText>
        <label>Assist Customers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Tint_Machine__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Auto Tint Machine</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BQ_Consumers_Converted_by_B_Q__c</fullName>
        <label># of Consumers Engaged by B&amp;Q</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Back_Dock_RTV__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Back Dock RTV</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Back_Dock_Receivables__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Back Dock Receivables</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_All_Flapper_Boards__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Check All Flapper Boards</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clean_Colour_Walls__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Clean Colour Walls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Colorant_Levels_Correct__c</fullName>
        <description>B&amp;Q: Are the colorant levels correct?</description>
        <label>Colorant Levels Correct?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Activity_Type__c</fullName>
        <description>B&amp;Q: what type of activities are the competition holding?</description>
        <label>Competitor Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>B&amp;Q Competitors in store</description>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annie Sloan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craig and Rose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuprinol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dulux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farrow and Ball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fired Earth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnstone’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Ashley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leyland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Little Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MacPhersons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ronseal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weathershield</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Recommendation_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Customer Recommendation 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Recommendation_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Masters</description>
        <label>Customer Recommendation 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Recommendation_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MASTERS</description>
        <label>Customer Recommendation 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Recommendation_Comments_1__c</fullName>
        <description>MASTERS</description>
        <label>Customer Recommendation Comments 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Recommendation_Comments_2__c</fullName>
        <description>MASTERS</description>
        <label>Customer Recommendation Comments 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Recommendation_Comments_3__c</fullName>
        <description>MASTERS</description>
        <label>Customer Recommendation Comments 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Store_Visit__c</fullName>
        <description>B&amp;Q date of store visit</description>
        <label>Date of Store Visit</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demonstrations__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Demonstrations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOC_Notes__c</fullName>
        <label>End of Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Working_Properly__c</fullName>
        <label>Equipment Working Properly?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <label>Execution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Store Walk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finish_Submit_All_Paperwork__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Finish &amp; Submit All Paperwork</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Helpful_Visitor_Logbook__c</fullName>
        <label>Helpful Visitor Logbook completed?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_Down_Time_by_Wk_Since_Last_Visit__c</fullName>
        <inlineHelpText>i.e. Machine not working and only one in store</inlineHelpText>
        <label>Hours Unable to Mix Paint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <inlineHelpText>i.e. 1 or 2 machines broken or can mix but not colour match</inlineHelpText>
        <label>Hours with Reduced Mixing Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Informal_Management_Team_Briefing__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Informal Management Team Briefing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Helpful_Visitor_Logbook_Explanation__c</fullName>
        <description>An explanation field for B&amp;Q user to explain why the helpful visitor logbook was not completed</description>
        <label>If No, please explain why</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Chips_Empty__c</fullName>
        <label># of Chips Empty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Products_OOS__c</fullName>
        <label># of Products OOS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOS_Investigation__c</fullName>
        <label>OOS Investigation</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OOS_Product_Notes__c</fullName>
        <label>OOS Product Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OOS_Report__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>OOS Report</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paint_Desk_Hours_by_Wk_Scheduled_Hours__c</fullName>
        <label>Scheduled Paint Area Hours for Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Next_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned Next Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replenish_Colour_Cards__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Replenish Colour Cards</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replenish_Colour_Chips__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Replenish Colour Chips</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_All_Bases_Available__c</fullName>
        <label>All Bases Available</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_B_Q_Engagement_Comments__c</fullName>
        <label>B&amp;Q Engagement Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Clean_Tinting_Machine__c</fullName>
        <label>Clean Tinting Machine</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Coverage_Demo_Visible__c</fullName>
        <inlineHelpText>Prem v Dulux Endurance - Leopard  Visible</inlineHelpText>
        <label>Coverage Demo Visible</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Decor_Manager_Engaged__c</fullName>
        <label>Decor Manager Engaged</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Decor_Team_Engaging__c</fullName>
        <label>Decor Team engaging in Aisle</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Decor_Team_Manning_Paint_Area__c</fullName>
        <label>Decor Team manning the Paint Area</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Demos_Comments__c</fullName>
        <label>Demos Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Equipment_Standards_Comments__c</fullName>
        <label>Equipment Standards Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Gloss_Demo_Visible__c</fullName>
        <inlineHelpText>Drawdown Cards - Valspar PBW Gloss v  Dulux PBW N/Drip Gloss</inlineHelpText>
        <label>Gloss Demo Visible</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Inspiration_Guides_Available__c</fullName>
        <label>Inspiration Guides Available</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_KPI_Weekly_Targets_Displayed__c</fullName>
        <label>KPI Weekly Targets Displayed</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Masonry_Demo_Visible__c</fullName>
        <inlineHelpText>Exterior Masonry v Sandtex  Rollout Sheets and Coloured Bricks</inlineHelpText>
        <label>Masonry Demo Visible</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Matching_Demo_Visible__c</fullName>
        <label>Matching Demo Visible</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Store_Audit_Summary_Comments__c</fullName>
        <label>Store Audit Summary Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Store_Management_Engaged__c</fullName>
        <label>Store Management Engaged</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Tidy_Paint_Desk__c</fullName>
        <label>Tidy Paint Desk</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Tidy_and_Full_Valspar_Chip__c</fullName>
        <label>Tidy and Full Valspar Rack Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_TradePoint_Engaged__c</fullName>
        <label>TradePoint Engaged</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_Valspar_Rack_Comments__c</fullName>
        <label>Valspar Rack Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Working_Light_Box__c</fullName>
        <label>Working Light Box</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Withdrawal_Notifications__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Stock Withdrawal Notifications</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targets_Visible_in_Store__c</fullName>
        <label>Targets Visible in Store</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tidy_Display_Ends__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Tidy Display Ends</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Colour_Computer_Database__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Update Colour Computer Database</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAC_Customers_Converted__c</fullName>
        <description>B&amp;Q VAC # of customers converted</description>
        <label># of Consumers Engaged by VAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valspar_POS_Displayed__c</fullName>
        <label>Valspar POS Displayed</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Refill__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Vendor Refill</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Walk_Paint_Aisles__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Walk Paint Aisles</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>In Store Execution</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>In Store Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In Store Executions</pluralLabel>
    <recordTypes>
        <fullName>Valspar_Master_In_Store_Execution</fullName>
        <active>true</active>
        <description>Master record type for In Store Execution object</description>
        <label>Valspar Master In Store Execution</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Customer_Recommendation_1_Comments_Req</fullName>
        <active>true</active>
        <description>If the user selects the Customer comments Check box they need to add text in the comments field below</description>
        <errorConditionFormula>Customer_Recommendation_1__c == TRUE &amp;&amp; ISBLANK( Customer_Recommendation_Comments_1__c )</errorConditionFormula>
        <errorMessage>Please enter text in the Customer Recommendation Comments field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Recommendation_2_Comments_Req</fullName>
        <active>true</active>
        <description>If the user selects the Customer comments Check box they need to add text in the comments field below</description>
        <errorConditionFormula>Customer_Recommendation_2__c = TRUE &amp;&amp; ISBLANK( Customer_Recommendation_Comments_2__c )</errorConditionFormula>
        <errorMessage>Please enter text in the Customer Recommendation Comments field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Recommendation_3_Comments_Req</fullName>
        <active>true</active>
        <description>If the user selects the Customer comments Check box they need to add text in the comments field below</description>
        <errorConditionFormula>Customer_Recommendation_3__c = TRUE &amp;&amp; ISBLANK( Customer_Recommendation_Comments_3__c )</errorConditionFormula>
        <errorMessage>Please enter text in the Customer Recommendation Comments field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Helpful_Visitor_Logbook_Explanation</fullName>
        <active>true</active>
        <description>Makes the &quot;If no, then please explain&quot; field required if user selects No for the Helpful Visitor Logbook drop down.</description>
        <errorConditionFormula>ISPICKVAL( Helpful_Visitor_Logbook__c , &apos;NO&apos;) &amp;&amp;   ISBLANK(No_Helpful_Visitor_Logbook_Explanation__c )</errorConditionFormula>
        <errorMessage>You must explain why the Helpful Visitor Logbook was not completed.</errorMessage>
    </validationRules>
</CustomObject>